...
                        )
                    }
                },
                actions = {
                    IconButton(onClick = {
                        openAccountDialog = true
                    }, modifier = Modifier.testTag("account"))
                    {
                        Icon(
                            painter = painterResource(R.drawable.ic_baseline_person_24),
                            contentDescription = "",
                        )
                    }
...
                        .fillMaxWidth(),
                    hint = "رمز عبور خود را وارد کنید",
                    onValueChange = { password = it },
                    value = password,
                )

                BigButton(text = "ورود") {
                    login()
                }
            }
        }
    }

...
                                token = ""
                                password = ""
                                saveToMemory()
                                loginMode = true
                            }, modifier = Modifier.padding(end = 8.dp)
                        ) {
                            Text(text = "خروج از حساب")
                        }

                        Button(
                            onClick = {
                                openAccountDialog = false
                                syncServerToLocalWarehouse(queue, state)
...
