...
        textStyle = MaterialTheme.typography.body2,
        value = value,
        onValueChange = {
            onValueChange(it)
        },
        modifier = modifier
            .testTag("TextField")
            .fillMaxWidth(),
        keyboardOptions = KeyboardOptions(
            imeAction = ImeAction.Done,
            keyboardType = keyboardType
        ),
        keyboardActions = KeyboardActions(onDone = {
...
